Fix pmd issues for config module